cleaned arancino.dev.cfg

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -212,7 +212,7 @@ print_stack_trace = True
 
 [transmitter]
 # Enable or disable the transmitter module of Arancino
-enabled = True
+enabled = False
 
 [transmitter.reader]
 # Represents the time (in seconds) in which the reader collects data
@@ -238,17 +238,17 @@ file = default.json.tmpl
 [transmitter.parser.s4t]
 # Configuration for ParserS4T
 
-db_name = db_test
+db_name = db_name
 
 [transmitter.sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
-class = SenderMqtt
+class = SenderDoNothing
 
 [transmitter.sender.donothing]
 
 [transmitter.sender.tcpsocket]
-host = localhost
-port = 1476
+host = your_host.it
+port = your_port_number
 
 [transmitter.sender.mqtt]
 use_tls = False
@@ -264,13 +264,13 @@ retain = False
 #   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
 #   - labels.?????
 
-topic = /data
+topic = your_topic
 
 # plain
-host = vulcano.smartme.io
-port = 1883
-username = tcu
-password = tecnokar
+host = your_host.it
+port = your_port_number
+username = your_username
+password = your_password
 
 # secure
 ca_path =
@@ -278,3 +278,4 @@ cert_path =
 key_path =
 
 [transmitter.sender.mqtts4t]
+
