--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -267,10 +267,10 @@ retain = False
 topic = /data
 
 # plain
-host = vulcano.smartme.io
-port = 1883
-username = tcu
-password = tecnokar
+host =
+port =
+username =
+password =
 
 # secure
 ca_path =
