fix config files

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -248,7 +248,7 @@ class = SenderDoNothing
 
 [transmitter.sender.tcpsocket]
 host = your_host.it
-port = your_port_number
+port = 1476
 
 [transmitter.sender.mqtt]
 use_tls = False
@@ -268,7 +268,7 @@ topic = your_topic
 
 # plain
 host = your_host.it
-port = your_port_number
+port = 1883
 username = your_username
 password = your_password
 
