--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -248,7 +248,7 @@ class = SenderDoNothing
 
 [transmitter.sender.tcpsocket]
 host = your_host.it
-port = your_port_number
+port = 1476
 
 [transmitter.sender.mqtt]
 use_tls = False
@@ -267,10 +267,10 @@ retain = False
 topic = your_topic
 
 # plain
-host =
-port =
-username =
-password =
+host = your_host.it
+port = 1883
+username = your_username
+password = your_password
 
 # secure
 ca_path =
