--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -49,6 +49,7 @@ datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
+datastore_tag_db = 5
 
 #------------------------------------------------------------------------------------------
 [redis.persistent]
@@ -58,6 +59,7 @@ datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
+datastore_tag_db = 5
 
 #------------------------------------------------------------------------------------------
 [redis.volatile_persistent]
@@ -70,6 +72,7 @@ datastore_tse_db = 2
 #persistent
 datastore_dev_db = 0
 datastore_per_db = 1
+datastore_tag_db = 2
 
 #------------------------------------------------------------------------------------------
 [port]
