--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ formats = gztar
 [metadata]
 name = arancino
 version = 2.4.0
-description = Arancino Module for Arancino Library
+description = Arancino Daemon for Arancino Library
 author = Sergio Tomasello
 author_email = sergio@smartme.io
 long_description =
