--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,9 @@ install_requires =
     gunicorn>=20.0.4
     Jinja2>=2.11.2
     paho-mqtt>=1.5.1
+    pyusb>=1.1.1
+    pyftdi>=0.53.1
+
 python_requires = >= 3.5
 
 [options.packages.find]
