aggiunta porta termux

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -171,7 +171,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
 
@@ -207,7 +207,7 @@ filter_list = []
 upload_command =
 
 # command to be spawn to discovery plugged usb cdc ports.
-discovery_command = termux -l
+discovery_command = termux-usb -l
 
 # reset port on connection, this override the default configuration
 reset_on_connect = True
