--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -154,6 +154,31 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 #------------------------------------------------------------------------------------------
+[port.usb_cdc]
+# automatically enable (and connect) a new discovered port
+enabled = True
+
+# set to true to make it not visible in the main device view in the UI
+hide = True
+
+# Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
+# - EXCLUDE: excledus the ones in the list.
+# - ONLY: acceptes only the ones in the list.
+# - ALL: no filter, accepts all. This is the default filter type.
+filter_type = ALL
+
+# List of VID:PID used to make a filter
+filter_list = []
+
+# command to be spawn when upload api is called. The command could have one or more placeholders.
+upload_command =
+
+# command to be spawn to discovery plugged usb cdc ports.
+discovery_command = termux -l
+
+# reset port on connection, this override the default configuration
+reset_on_connect = True
+#------------------------------------------------------------------------------------------
 [port.test]
 # automatically enable (and connect) a new discovered port
 enabled = True
