--- a/extras/vars.env
+++ b/extras/vars.env
@@ -1,16 +1,5 @@
-export ARANCINO=/data/data/com.termux/files/usr/etc/arancino
-export ARANCINOCONF=/data/data/com.termux/files/usr/etc/arancino/config
-export ARANCINOLOG=/data/data/com.termux/files/usr/var/log/arancino
-export ARANCINOENV=production
-export FLASK_ENV=production
-
-export ARANCINO=/data/data/com.termux/files/home/arancino-module
-export ARANCINOCONF=/data/data/com.termux/files/usr/home/arancino-module/config
-export ARANCINOLOG=/data/data/com.termux/files/usr/var/log/arancino
-export ARANCINOENV=production
-export FLASK_ENV=production
-
-export ARANCINO=/data/data/com.termux/files/home/arancino-module
-export ARANCINOCONF=/data/data/com.termux/files/home/arancino-module/config
-export ARANCINOLOG=/data/data/com.termux/files/home/arancino-module/log
-export ARANCINOENV=DEV
+ARANCINO=/data/data/com.termux/files/usr/etc/arancino
+ARANCINOCONF=/data/data/com.termux/files/usr/etc/arancino/config
+ARANCINOLOG=/data/data/com.termux/files/usr/var/log/arancino
+ARANCINOENV=production
+FLASK_ENV=production
