first commit Arancino Uart-Ble Port

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -76,6 +76,12 @@ datastore_tag_db = 2
 
 #------------------------------------------------------------------------------------------
 [port]
+# automatically enable (and connect) a new discovered port
+enabled = True
+
+# set to true to make it not visible in the main device view in the UI
+hide = False
+
 # folder for firmware to be flashed onto microcontroller.
 firmware_path = /tmp/arancino/firmware
 
@@ -156,7 +162,7 @@ reset_on_connect = True
 #------------------------------------------------------------------------------------------
 [port.test]
 # automatically enable (and connect) a new discovered port
-enabled = True
+enabled = False
 
 # set to true to make it not visible in the main device view in the UI
 hide = True
@@ -171,10 +177,9 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
-
 delay = 5
 
 # prefix of the id generated for the test port
@@ -182,6 +187,25 @@ id_template = TESTPORT
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 upload_command =
+
+# reset port on connection, this override the default configuration
+reset_on_connect = False
+
+#------------------------------------------------------------------------------------------
+[port.uart_ble]
+# Filter works with the below list of parameters. Accepted filter type are: EXCLUDE, ONLY, ALL
+# - EXCLUDE: excledus the ones in the list.
+# - ONLY: acceptes only the ones in the list.
+# - ALL: no filter, accepts all. This is the default filter type.
+filter_type = ALL
+
+filter_list = []
+
+# Timeout in seconds in connection. Min: 1
+timeout = 10
+
+# command to be spawn when upload api is called. The command could have one or more placeholders.
+upload_command = nrfutil ...
 
 # reset port on connection, this override the default configuration
 reset_on_connect = False
