varius improvements and update about uart-ble

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -76,6 +76,10 @@ datastore_tag_db = 2
 
 #------------------------------------------------------------------------------------------
 [port]
+
+# enable discovery service
+discovery = True
+
 # automatically enable (and connect) a new discovered port
 enabled = True
 
@@ -94,6 +98,7 @@ reset_on_connect = True
 #------------------------------------------------------------------------------------------
 [port.serial]
 # default 'arancino port' configuration status
+discovery = True
 
 # automatically enable (and connect) a new discovered port
 enabled = True
@@ -118,6 +123,9 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 
 # Timeout in seconds in serial connection Min: 1
 timeout = 1
+
+# reset port on connection, override the default configuration
+reset_on_connect = True
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 #   available placeholder are: (each attributes of a Port class can used as placeholder)
@@ -154,13 +162,21 @@ timeout = 1
 # OTHERS
 #   - firmware
 
+[port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
-# reset port on connection, override the default configuration
-reset_on_connect = True
+[port.serial.nrf52]
+
+upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+
+[port.serial.stm32]
+upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+
 
 #------------------------------------------------------------------------------------------
 [port.test]
+discovery = False
+
 # automatically enable (and connect) a new discovered port
 enabled = False
 
@@ -193,6 +209,8 @@ reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
 [port.uart_ble]
+discovery = True
+
 # Filter works with the below list of parameters. Accepted filter type are: EXCLUDE, ONLY, ALL
 # - EXCLUDE: excledus the ones in the list.
 # - ONLY: acceptes only the ones in the list.
