--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -98,7 +98,7 @@ reset_on_connect = True
 #------------------------------------------------------------------------------------------
 [port.serial]
 # default 'arancino port' configuration status
-discovery = True
+discovery = False
 
 # automatically enable (and connect) a new discovered port
 enabled = True
