update ble uart; introducing heartbeat

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -101,7 +101,7 @@ reset_on_connect = True
 discovery = False
 
 # automatically enable (and connect) a new discovered port
-enabled = True
+enabled = False
 
 # set to true to make it not visible in the main device view in the UI
 hide = False
@@ -119,7 +119,7 @@ reset_baudrate = 300
 filter_type=ALL
 
 # List of VID:PID used to make a filter
-filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
+filter_list = ["0x04d8:0xecd9"]
 
 # Timeout in seconds in serial connection Min: 1
 timeout = 1
@@ -161,6 +161,9 @@ reset_on_connect = True
 #
 # OTHERS
 #   - firmware
+
+
+upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
