update: nuovo meccanismo per heartbeat

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -16,7 +16,7 @@ host_persistent = localhost
 port_volatile = 6379
 
 # redis server port of persistent instance
-port_persistent = 6380
+port_persistent = 6379
 
 # decode response in redis connection
 decode_response = True
@@ -178,7 +178,7 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
 #------------------------------------------------------------------------------------------
 [port.test]
-discovery = False
+discovery = True
 
 # automatically enable (and connect) a new discovered port
 enabled = False
@@ -196,10 +196,10 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 0
+num = 1
 
 # delay between each command in seconds (accept float). Default 500ms
-delay = 5
+delay = 500
 
 # prefix of the id generated for the test port
 id_template = TESTPORT
