--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ install_requires =
     gunicorn>=20.0.4
     Jinja2>=2.11.2
     paho-mqtt>=1.5.1
+    adafruit-circuitpython-ble==8.0.3
 python_requires = >= 3.5
 
 [options.packages.find]
