--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -50,6 +50,7 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 datastore_tag_db = 5
+datastore_scr_db = 6
 
 #------------------------------------------------------------------------------------------
 [redis.persistent]
@@ -60,6 +61,7 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 datastore_tag_db = 5
+datastore_scr_db = 6
 
 #------------------------------------------------------------------------------------------
 [redis.volatile_persistent]
@@ -73,6 +75,7 @@ datastore_tse_db = 2
 datastore_dev_db = 0
 datastore_per_db = 1
 datastore_tag_db = 2
+datastore_scr_db = 3
 
 #------------------------------------------------------------------------------------------
 [port]
