--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -187,6 +187,17 @@ upload_command =
 reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
+
+[port.mqtt]
+
+#Parametri disponibili alla connessione
+host= your_host.it
+port= 1883
+username = your_username
+password = your_password
+topic = topic
+
+#------------------------------------------------------------------------------------------
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
 level = DEBUG
