update mqtt port

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -83,7 +83,7 @@ firmware_path = /tmp/arancino/firmware
 firmware_file_types = ["bin", "hex"]
 
 # reset port on connection
-reset_on_connect = True
+reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -189,13 +189,21 @@ reset_on_connect = False
 #------------------------------------------------------------------------------------------
 
 [port.mqtt]
+# automatically enable (and connect) a new discovered port
+enabled = True
 
-#Parametri disponibili alla connessione
-host= your_host.it
-port= 1883
-username = your_username
-password = your_password
-topic = topic
+# set to true to make it not visible in the main device view in the UI
+hide = False
+
+# reset port on connection, this override the default configuration
+reset_on_connect = False
+
+# Mqtt-Bus Broker Connection Parameters
+host = server.smartme.io
+port = 1883
+username = arancino-daemon
+password = d43mon
+topic = arancino/discovery
 
 #------------------------------------------------------------------------------------------
 [log]
