patch many issues

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -85,6 +85,9 @@ firmware_file_types = ["bin", "hex"]
 # reset port on connection
 reset_on_connect = True
 
+# reconnection delay after a reset (in seconds)
+reset_reconnection_delay = 15
+
 #------------------------------------------------------------------------------------------
 [port.serial]
 # default 'arancino port' configuration status
@@ -150,8 +153,30 @@ timeout = 1
 
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
-# reset port on connection, override the default configuration
+# reset port on connection, override the default configuration (can be overrided by the mcu family)
 reset_on_connect = True
+
+# reconnection delay after a reset (in seconds)
+reset_reconnection_delay = 3
+
+[port.serial.samd21]
+upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+reset_on_connect = True
+reset_reconnection_delay = 15
+comm_baudrate = 115200
+
+[port.serial.nrf52]
+upload_command = /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank
+reset_on_connect = True
+reset_reconnection_delay = 15
+comm_baudrate = 256000
+
+[port.serial.stm32]
+upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+reset_on_connect = True
+reset_reconnection_delay = 15
+comm_baudrate = 256000
+
 
 #------------------------------------------------------------------------------------------
 [port.test]
