--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -157,11 +157,13 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 3
+reset_reconnection_delay = 15
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
+reset_reconnection_delay = 15
+comm_baudrate = 115200
 
 [port.serial.nrf52]
 upload_command = /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank
@@ -170,8 +172,9 @@ reset_reconnection_delay = 15
 comm_baudrate = 256000
 
 [port.serial.stm32]
-upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+upload_command = /usr/bin/dfu-util {port._device} {firmware}
 reset_on_connect = True
+reset_reconnection_delay = 15
 comm_baudrate = 256000
 
 
@@ -303,4 +306,3 @@ cert_path =
 key_path =
 
 [transmitter.sender.mqtts4t]
-
