updates for mqtt port

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -198,12 +198,17 @@ hide = False
 # reset port on connection, this override the default configuration
 reset_on_connect = False
 
+filter_type = ALL
+filter_list = []
+
 # Mqtt-Bus Broker Connection Parameters
-host = server.smartme.io
+host = 
 port = 1883
 username = arancino-daemon
-password = d43mon
-topic = arancino/discovery
+password = 
+discovery_topic = arancino/discovery
+cortex_topic = arancino/cortex
+service_topic = arancino/service
 
 #------------------------------------------------------------------------------------------
 [log]
