--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -229,10 +229,10 @@ filter_type = ALL
 filter_list = []
 
 # Mqtt-Bus Broker Connection Parameters
-host = 
+host = server.smartme.io
 port = 1883
 username = arancino-daemon
-password = 
+password = d43mon
 discovery_topic = arancino/discovery
 cortex_topic = arancino/cortex
 service_topic = arancino/service
