improve heartbeat, heartb. configuration based on port type

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -163,6 +163,16 @@ reset_on_connect = True
 #   - firmware
 
 
+# time (in seconds) between each heartbeat check
+heartbeat_rate = 5
+
+# time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+heartbeat_time = 0.005
+
+# number of heartbeat checks, when no heartbeat is detected, before send alert.
+heartbeat_attempts = 5
+
+
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
 [port.serial.samd21]
@@ -210,6 +220,15 @@ upload_command =
 # reset port on connection, this override the default configuration
 reset_on_connect = False
 
+# time (in seconds) between each heartbeat check
+heartbeat_rate = 5
+
+# time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+heartbeat_time = 0.001
+
+# number of heartbeat checks, when no heartbeat is detected, before send alert.
+heartbeat_attempts = 5
+
 #------------------------------------------------------------------------------------------
 
 [port.mqtt]
@@ -237,6 +256,16 @@ discovery_topic = arancino/discovery
 cortex_topic = arancino/cortex
 service_topic = arancino/service
 
+
+# time (in seconds) between each heartbeat check
+heartbeat_rate = 5
+
+# time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+heartbeat_time = 0.2
+
+# number of heartbeat checks, when no heartbeat is detected, before send alert.
+heartbeat_attempts = 5
+
 #------------------------------------------------------------------------------------------
 
 [port.uart_ble]
@@ -255,6 +284,15 @@ upload_command = nrfutil ...
 
 # reset port on connection, this override the default configuration
 reset_on_connect = False
+
+# time (in seconds) between each heartbeat check
+heartbeat_rate = 5
+
+# time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+heartbeat_time = 0.25
+
+# number of heartbeat checks, when no heartbeat is detected, before send alert.
+heartbeat_attempts = 5
 
 #------------------------------------------------------------------------------------------
 [log]
