update upload pattern for STM32 Serial Port

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -86,7 +86,7 @@ firmware_file_types = ["bin", "hex"]
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -157,12 +157,12 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 comm_baudrate = 115200
 
 [port.serial.nrf52]
@@ -172,9 +172,9 @@ reset_reconnection_delay = 15
 comm_baudrate = 256000
 
 [port.serial.stm32]
-upload_command = /usr/bin/dfu-util {port._device} {firmware}
+upload_command = /usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}
 reset_on_connect = True
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 comm_baudrate = 256000
 
 
