--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -177,6 +177,11 @@ reset_on_connect = True
 reset_reconnection_delay = 5
 comm_baudrate = 256000
 
+[port.serial.rp2040]
+upload_command = /usr/bin/run-arancino-uf2conv {port._device} {firmware}
+reset_on_connect = True
+reset_reconnection_delay = 15
+comm_baudrate = 256000
 
 #------------------------------------------------------------------------------------------
 [port.test]
@@ -196,7 +201,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
 
