update exceptions management

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -86,7 +86,7 @@ firmware_file_types = ["bin", "hex"]
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -117,39 +117,7 @@ filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 timeout = 1
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
-#   available placeholder are: (each attributes of a Port class can used as placeholder)
-#
-# BASE PORT
-#   - port._id
-#   - port._device
-#   - port._port_type
-#   - port._library_version
-#   - port._m_b_creation_date
-#   - port._m_b_last_usage_date
-#   - port._m_s_plugged
-#   - port._m_s_connected
-#   - port._m_c_enabled
-#   - port._m_c_alias
-#   - port._m_c_hide
-#   - firmware
-#
-# SERIAL PORT
-#   - port.__comm_baudrate
-#   - port.__reset_baudrate
-#   - port.__timeout
-#   - port.__m_p_vid
-#   - port.__m_p_pid
-#   - port.__m_p_name
-#   - port.__m_p_description
-#   - port.__m_p_hwid
-#   - port.__m_p_serial_number
-#   - port.__m_p_location
-#   - port.__m_p_manufacturer
-#   - port.__m_p_product
-#   - port.__m_p_interface
-#
-# OTHERS
-#   - firmware
+#   available placeholder are: (each attributes of a Port class can used as placeholder). See docs for more info.
 
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
@@ -157,12 +125,12 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 3
+reset_reconnection_delay = 5
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 comm_baudrate = 115200
 
 [port.serial.nrf52]
@@ -174,9 +142,14 @@ comm_baudrate = 256000
 [port.serial.stm32]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
-reset_reconnection_delay = 15
+reset_reconnection_delay = 5
 comm_baudrate = 256000
 
+[port.serial.rp20]
+upload_command = /usr/bin/run-arancino-uf2conv {port._device} {firmware}
+reset_on_connect = True
+reset_reconnection_delay = 5
+comm_baudrate = 256000
 
 #------------------------------------------------------------------------------------------
 [port.test]
