update and fix update reset reconnection delay

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -86,7 +86,7 @@ firmware_file_types = ["bin", "hex"]
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 5
+reset_reconnection_delay = 15
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -108,10 +108,10 @@ reset_baudrate = 300
 # EXCLUDE: excledus the ones in the list.
 # ONLY: acceptes only the ones in the list.
 # ALL: no filter, accepts all. This is the default filter type.
-filter_type=ALL
+filter_type=EXCLUDE
 
 # List of VID:PID used to make a filter
-filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
+filter_list = ["0x0403:0x6001"]
 
 # Timeout in seconds in serial connection Min: 1
 timeout = 1
@@ -157,7 +157,7 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 5
+reset_reconnection_delay = 15
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
@@ -201,7 +201,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
 
