fix upload command management

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -80,7 +80,7 @@ datastore_tag_db = 2
 firmware_path = /tmp/arancino/firmware
 
 # allowed file extensions for firmware
-firmware_file_types = ["bin", "hex"]
+firmware_file_types = ["bin", "hex", "uf2"]
 
 # reset port on connection
 reset_on_connect = True
@@ -134,13 +134,13 @@ reset_reconnection_delay = 5
 comm_baudrate = 115200
 
 [port.serial.nrf52]
-upload_command = /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank
+upload_command = /usr/bin/run-arancino-adafruit-nrfutil {port._device} {firmware}
 reset_on_connect = True
 reset_reconnection_delay = 15
 comm_baudrate = 256000
 
 [port.serial.stm32]
-upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
+upload_command = /usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}
 reset_on_connect = True
 reset_reconnection_delay = 5
 comm_baudrate = 256000
