remove upload supports for non-samd21 devices

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -81,11 +81,12 @@ firmware_path = /tmp/arancino/firmware
 
 # allowed file extensions for firmware
 firmware_file_types = ["bin", "hex", "uf2"]
+
 # reset port on connection
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 15
+reset_reconnection_delay = 40
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -107,10 +108,17 @@ reset_baudrate = 300
 # EXCLUDE: excledus the ones in the list.
 # ONLY: acceptes only the ones in the list.
 # ALL: no filter, accepts all. This is the default filter type.
-filter_type=EXCLUDE
+
+# 0x04D8:0xECD9 Arancino Mignon (SAMD21)
+# 0x04D8:0xECDA Arancino (SAMD21)
+# 0x1915:0x521F Arancino Volante (NRF52)
+# 0x2E8A:0x000A Arancino Pico (RP2040)
+# 0x0483 0x5740 Arancino V* (STM32)
+
+filter_type=ALL
 
 # List of VID:PID used to make a filter
-filter_list = ["0x0403:0x6001"]
+filter_list = ["0x04D8:0xECD9", "0x04D8:0xECDA","0x1915:0x521F","0x2E8A:0x000A","0x0483 0x5740"]
 
 # Timeout in seconds in serial connection Min: 1
 timeout = 1
@@ -156,7 +164,7 @@ upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 reset_on_connect = True
 
 # reconnection delay after a reset (in seconds)
-reset_reconnection_delay = 15
+reset_reconnection_delay = 40
 
 [port.serial.samd21]
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
@@ -167,7 +175,7 @@ comm_baudrate = 115200
 [port.serial.nrf52]
 upload_command = /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank
 reset_on_connect = True
-reset_reconnection_delay = 15
+reset_reconnection_delay = 40
 comm_baudrate = 256000
 
 [port.serial.stm32]
