adding "zip" type of firmware for nRF52 platform #CU-1zhvp2j

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -80,7 +80,7 @@ datastore_tag_db = 2
 firmware_path = /tmp/arancino/firmware
 
 # allowed file extensions for firmware
-firmware_file_types = ["bin", "hex", "uf2"]
+firmware_file_types = ["bin", "hex", "uf2", "zip"]
 
 # reset port on connection
 reset_on_connect = True
