--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -254,67 +254,11 @@ print_stack_trace = True
 # Enable or disable the transmitter module of Arancino
 enabled = False
 
+# Flows that run on the transmitter. Each flow is defined by a configuration file.
+flows= ["smartme"]
+
+
 [transmitter.reader]
 # Represents the time (in seconds) in which the reader collects data
 # and transfers it to the upper level
 cycle_time = 10
-
-[transmitter.parser]
-class = ParserSimple
-
-# template file used to parse data with the template engine (jinja2)
-#   default available templates:
-#   - default.yaml.tmpl
-#   - default.json.tmpl
-#   - default.xml.tmpl
-
-file = default.json.tmpl
-
-[transmitter.parser.simple]
-# Configuration for ParserSimple
-
-
-
-[transmitter.parser.s4t]
-# Configuration for ParserS4T
-
-db_name = db_name
-
-[transmitter.sender]
-# Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
-class = SenderDoNothing
-
-[transmitter.sender.donothing]
-
-[transmitter.sender.tcpsocket]
-host = your_host.it
-port = 1476
-
-[transmitter.sender.mqtt]
-use_tls = False
-qos = 1
-retain = False
-
-# NOTE: non available at the moment.
-# channel parameter can contains placeholder with the using of "{" and "}"
-# placeholder can be:
-#   - key -> the name of the key that contains the measurements
-#   - labels.port_id -> the identifier of the port that provides the measurements
-#   - labels.port_type -> the type of the port that provides the measurements
-#   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
-#   - labels.?????
-
-topic = your_topic
-
-# plain
-host = your_host.it
-port = 1883
-username = your_username
-password = your_password
-
-# secure
-ca_path =
-cert_path =
-key_path =
-
-[transmitter.sender.mqtts4t]
