update configuration for all sender and parser components

--- a/config/transmitter.flow.docs.cfg
+++ b/config/transmitter.flow.docs.cfg
@@ -27,7 +27,7 @@ class = SenderDoNothing
 
 [sender.donothing]
 
-[tcpsocket]
+[sender.tcpsocket]
 host = your_server
 port = 1476
 
@@ -54,8 +54,8 @@ username = your_username
 password = your_password
 
 # secure
-ca_path =
-cert_path =
-key_path =
+ca_file =
+cert_file =
+key_file =
 
-[tsender.mqtts4t]
+[sender.mqtts4t]
