--- a/config/transmitter.flow.smartme.cfg
+++ b/config/transmitter.flow.smartme.cfg
@@ -1,4 +1,4 @@
-[general]
+[flow]
 name = SmartmeFlow
 enabled = True
 
@@ -8,17 +8,17 @@ section = [s47]
 
 file = default.json.tmpl
 
-[parser.s47]
+[s47]
 # Configuration for ParserS4T
 
 db_name = db_name
 
 [sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
-class = SenderDoNothing
+class = SenderMqttS4T
 section = [mqtt, mqtts4t]
 
-[sender.mqtt]
+[mqtt]
 use_tls = False
 qos = 1
 retain = False
@@ -45,4 +45,4 @@ ca_path =
 cert_path =
 key_path =
 
-[sender.mqtts4t]
+[mqtts4t]
