--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -252,10 +252,10 @@ print_stack_trace = True
 
 [transmitter]
 # Enable or disable the transmitter module of Arancino
-enabled = False
+enabled = True
 
 # Flows that run on the transmitter. Each flow is defined by a configuration file.
-flows= ["smartme"]
+flows= ["smartme", "test"]
 
 
 [transmitter.reader]
