--- a/config/transmitter.flow.smartme.cfg
+++ b/config/transmitter.flow.smartme.cfg
@@ -4,19 +4,21 @@ enabled = True
 
 [parser]
 class = ParserS4T
-section = [s47]
-
+section = ["simple", "s4t", "parser"]
 file = default.json.tmpl
 
-[s47]
+[simple]
+# Configuration for ParserSimple
+
+[s4t]
 # Configuration for ParserS4T
 
-db_name = db_name
+db_name = sme_sandbox
 
 [sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
 class = SenderMqttS4T
-section = [mqtt, mqtts4t]
+section = ["mqtt", "mqtts4t"]
 
 [mqtt]
 use_tls = False
@@ -35,10 +37,10 @@ retain = False
 topic = your_topic
 
 # plain
-host = your_host.it
+host = *******
 port = 1883
-username = your_username
-password = your_password
+username = *******
+password = *******
 
 # secure
 ca_path =
