--- a/setup.cfg
+++ b/setup.cfg
@@ -47,18 +47,18 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-    pyserial>=3.4
+    pyserial==3.5
     redis>=2.10.6
     redistimeseries>=1.4.3
     setuptools>=41.4.0
     semantic-version>=2.8.4
     uptime>=3.0.1
-    Flask>=1.1.1
-    Flask_HTTPAuth>=3.3.0
+    Flask==2.0.3
+    Flask_HTTPAuth==4.5.0
     requests>=2.23.0
     netifaces>=0.10.9
     gunicorn>=20.0.4
-    Jinja2>=2.11.2
+    Jinja2==3.0.3
     paho-mqtt>=1.5.1
 python_requires = >= 3.5
 
