distinzione tms di lettura e logs per flow e filtraggio

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -255,7 +255,7 @@ print_stack_trace = True
 enabled = True
 
 # Flows that run on the transmitter. Each flow is defined by a configuration file.
-flows= ["smartme", "test"]
+flows= ["test", "smartme"]
 
 
 [transmitter.reader]
