--- a/config/transmitter.flow.smartme.cfg
+++ b/config/transmitter.flow.smartme.cfg
@@ -18,7 +18,7 @@ db_name = sme_sandbox
 [sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
 class = SenderMqttS4T
-section = ["mqtt", "mqtts4t"]
+section = ["mqtt", "mqtts4t", "sender"]
 
 [mqtt]
 use_tls = False
@@ -37,10 +37,10 @@ retain = False
 topic = your_topic
 
 # plain
-host = *******
+host = server.smartme.io
 port = 1883
-username = *******
-password = *******
+username = arancini
+password = smartme
 
 # secure
 ca_path =
