--- a/config/transmitter.flow.test.cfg
+++ b/config/transmitter.flow.test.cfg
@@ -13,8 +13,8 @@ file = default.json.tmpl
 [sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
 class = SenderTcpSocket
-section = ["tcpsocket"]
+section = ["tcpsocket", "sender"]
 
 [tcpsocket]
-host = 192.168.158.231
+host = localhost
 port = 1122
