--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -26,7 +26,7 @@ decode_response = True
 # - PERSISTENT: all databases are persistent (only in production with two redis instances)
 # - VOLATILE_PERSISTENT: data store, reserved key store and time series store are volatile;
 #       device store and persistent data store are persistent (only in production with two redis instances).
-instance_type = VOLATILE
+instance_type = VOLATILE_PERSISTENT
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
@@ -50,6 +50,7 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 datastore_tag_db = 5
+datastore_stng_db = 6
 
 #------------------------------------------------------------------------------------------
 [redis.persistent]
@@ -60,6 +61,7 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 datastore_tag_db = 5
+datastore_stng_db = 6
 
 #------------------------------------------------------------------------------------------
 [redis.volatile_persistent]
@@ -73,6 +75,7 @@ datastore_tse_db = 2
 datastore_dev_db = 0
 datastore_per_db = 1
 datastore_tag_db = 2
+datastore_stng_db = 3
 
 #------------------------------------------------------------------------------------------
 [port]
@@ -208,7 +211,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 0
+num = 1
 
 # delay between each command in seconds (accept float). Default 500ms
 
