--- a/setup.cfg
+++ b/setup.cfg
@@ -48,8 +48,7 @@ include_package_data = True
 packages = find:
 install_requires =
     pyserial>=3.4
-    redis>=2.10.6
-    redistimeseries>=1.4.3
+    redis>=4.2.1
     setuptools>=41.4.0
     semantic-version>=2.8.4
     uptime>=3.0.1
@@ -60,6 +59,8 @@ install_requires =
     gunicorn>=20.0.4
     Jinja2>=2.11.2
     paho-mqtt>=1.5.1
+    msgpack==1.0.3
+
 python_requires = >= 3.5
 
 [options.packages.find]
